# bouncer

./: README.md  eslint.config.js  eslintrc-gjs.yml  extension.js  firewalldZones.js  io.github.justinrdonnelly.bouncer.json  meson.build  metadata.json  networkManagerStateItemSuperShell.js  networkManagerStateItemSuperTest.js  networkManagerZoneForConnection.js  networkState.js  package.json  test-firewalldZones.js  test-networkManagerZoneForConnection.js  test-networkState.js  test-zoneForConnection.js  test-zoneInfo.js  zoneForConnection.js  zoneInfo.js
.github/workflows/: eslint.yml
data/: io.github.justinrdonnelly.bouncer.desktop.in  io.github.justinrdonnelly.bouncer.desktop.in.in  io.github.justinrdonnelly.bouncer.gschema.xml  io.github.justinrdonnelly.bouncer.gschema.xml.in  io.github.justinrdonnelly.bouncer.metainfo.xml.in  io.github.justinrdonnelly.bouncer.metainfo.xml.in.in  meson.build
data/icons/: meson.build
flatpak-builder-lint-exceptions/: builddir-exceptions.json  manifest-exceptions.json  repo-exceptions.json
po/: LINGUAS  POTFILES  POTFILES.in  bouncer.pot  da.po  it.po  meson.build  nl.po  oc.po  pl.po  ru.po  zh_CN.po
src/: bouncerWindow.js  chooseZoneBox.js  chooseZoneBox.ui  chooseZoneWindow.js  chooseZoneWindow.ui  config.js.in  connectionIdsSeen.js  dashboardBox.js  dashboardBox.ui  dashboardWindow.js  dashboardWindow.ui  data.js  dataMigration.js  dependencyCheck.js  dependencyItem.js  dependencyItem.ui  diagnosticsBox.js  diagnosticsBox.ui  diagnosticsItem.js  diagnosticsItem.ui  diagnosticsWindow.js  diagnosticsWindow.ui  errorSignal.js  io.github.justinrdonnelly.bouncer.data.gresource.xml  io.github.justinrdonnelly.bouncer.src.gresource.xml  main.js  meson.build  moreInfo.js  moreInfo.ui  networkState.js  promisify.js  window.js  zoneInfo.js
src/ui/: bouncerWindow.js  bouncerWindow.ui  chooseZoneBox.js  chooseZoneBox.ui  dashboardBox.js  dashboardBox.ui  dependencyItem.js  dependencyItem.ui  moreInfo.js  moreInfo.ui
test/: test-connectionIdsSeen.js  test-networkState.js  test-zoneForConnection.js  test-zoneInfo.js
